<resources>
    <string name="app_name">AndroidExercise</string>
    <string name="menu_home">Home</string>
    <string name="fragment_home">Home</string>
    <string name="facebook_app_id">816004972531857</string>
    <string name="fb_login_protocol_scheme">fb816004972531857</string>
    <string name="menu_fb_login">Facebook Login</string>
    <string name="fragment_facebook_login">Facebook Login</string>
    <string name="menu_raw_data">Read Raw Data</string>
    <string name="fragment_raw_data">Raw Data</string>
    <string name="menu_asset_data">Read Asset Data</string>
    <string name="fragment_asset_data">Read Asset Data</string>
    <string name="menu_io_file">IO File</string>
    <string name="fragment_io_file">IO File</string>
    <string name="hint_content">Content</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="fragment_whats_app_send">WhatsApp Send</string>
    <string name="hint_message">Message</string>
    <string name="text_send">Send</string>
    <string name="menu_whats_app_send">WhatsApp Send</string>
    <string name="menu_fb_data">Facebook Data</string>
    <string name="fragment_facebook_data">Facebook Data</string>
    <string name="message_welcome">Welcome!</string>
    <string name="message_reading">Reading…</string>
    <string name="message_success">Success!</string>
    <string name="message_service_created">"Service created…"</string>
    <string name="message_service_started">"Service started…"</string>
    <string name="message_service_destroyed">"Service destroyed…"</string>
    <string name="menu_service">Service</string>
    <string name="fragment_service">Service</string>
    <string name="format_percentage">%d %%</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_replay">Replay</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_start">Start</string>
    <string name="display_coordinates">%1$.1f, %2$.1f</string>
    <string name="message_no_location_tracking">Unable to track location</string>
    <string name="action_request_permission">Request Permission</string>
    <string name="menu_location">Location</string>
    <string name="fragment_location">Location</string>
    <string name="permission_detail">Location permission is needed.</string>
    <string name="action_ok">OK</string>
    <string name="menu_fcm">FCM</string>
    <string name="fragment_fcm">FCM</string>
    <string name="fcm_notification_channel_id">fcm_channel_01</string>
    <string name="fcm_notification_channel_name">FCM Notification</string>
</resources>