<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_facebook_login"
            android:title="@string/menu_fb_login" />
        <item
            android:id="@+id/nav_facebook_data"
            android:title="@string/menu_fb_data" />
        <item
            android:id="@+id/nav_whats_app_send"
            android:title="@string/menu_whats_app_send" />
        <item
            android:id="@+id/nav_io_file"
            android:title="@string/menu_io_file" />
        <item
            android:id="@+id/nav_asset_data"
            android:title="@string/menu_asset_data" />
        <item
            android:id="@+id/nav_raw_data"
            android:title="@string/menu_raw_data" />
        <item
            android:id="@+id/nav_service"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_fcm"
            android:title="@string/menu_fcm" />
    </group>
</menu>