<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.cody.androidexercise.ui.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_facebook_login"
        android:name="com.cody.androidexercise.ui.facebook.FacebookLoginFragment"
        android:label="@string/fragment_facebook_login"
        tools:layout="@layout/fragment_facebook_login" />
    <fragment
        android:id="@+id/nav_asset_data"
        android:name="com.cody.androidexercise.ui.assetdata.AssetDataFragment"
        android:label="@string/fragment_asset_data"
        tools:layout="@layout/fragment_asset_data" />
</navigation>